Fix insufficient contrast of .post-continue

--- a/_sass/whiteglass/_layout.scss
+++ b/_sass/whiteglass/_layout.scss
@@ -127,7 +127,7 @@
 
     &,
     &:visited {
-      color: $grey-color;
+      color: $grey-color-dark;
       background-color: $grey-color-light;
     }
 
